--- a/style.css
+++ b/style.css
@@ -5,3 +5,26 @@
   width: 100%;
   background-color: rgba(34,34,6,0.1);
 }
+
+
+h4 {
+    font-size: 20px;
+    color: rgba(0, 255, 90, 1);
+    text-align: center;
+    padding: 20px;
+    background-color: #AAF;
+}
+
+
+.card {
+    width: 250px;
+    height: 250px;
+    border: 2px solid #888;
+    border-radius: 15px;
+    background-color: rgba(45, 45, 45, 0.1);
+    margin: 15px;
+    padding: 10px;
+    box-shadow: 0 20px 20px rgba(0, 45, 0, 0.18), 0 10px 10px rgba(0, 255, 0, 0.18);
+    position: relative;
+    left: 30px;
+}
