--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 }
 
 
+table, tr, td, th {
+    border: 1px solid;
+    border-collapse: collapse;
+}
+
 h4 {
     font-size: 20px;
     color: rgba(0, 255, 90, 1);
