branch test4 commit #1

--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
 }
 
 
+
+li {
+    display: inline-block;
+    padding: 20px 20px 20px 20px;
+}
+
+
 table, tr, td, th {
     border: 1px solid;
     border-collapse: collapse;
